welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:5: error: not found: value i
	for(i<- T(i) to num){
                  ^