welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
	var T = new Array[Int](num);
	T(1)=1;
	T(2)=2;
	for(i<- T(i) to num){
		for(j<-0 to T(i) ){
			T(i+j)=T(i);
		}
		T(i)=T(i)+1;
		
	}
}
